--- a/index.html
+++ b/index.html
@@ -1315,7 +1315,7 @@ html {
           <div class="portfolio-content">
             <h3>NEXUS WAVE GLOBAL</h3>
             <p>A comprehensive business website with modern design and responsive layout.</p>
-            <a href="https://jeffreycanlas0401-eng.github.io/nwg/" class="btn see-more" data-project="project1">See More</a>
+            <a href="https://jcanlasdesigns.github.io/nwg/" class="btn see-more" data-project="project1">See More</a>
           </div>
         </div>
         <div class="portfolio-card">
@@ -1339,7 +1339,7 @@ html {
           <div class="portfolio-content">
             <h3>JK CAR DETAILING</h3>
             <p>Car Detailing Services in Virginia USA</p>
-            <a href="https://jeffreycanlas0401-eng.github.io/car-detailing" class="btn see-more" data-project="project6">See More</a>
+            <a href="https://jcanlasdesigns.github.io/car-detailing" class="btn see-more" data-project="project6">See More</a>
           </div>
         </div>
 		<div class="portfolio-card">
@@ -1347,7 +1347,15 @@ html {
           <div class="portfolio-content">
             <h3>TOUCH OF GOLD</h3>
             <p>Hair and Beauty Spa & Salon Balagtas & Bocaue, Bulacan</p>
-            <a href="https://jeffreycanlas0401-eng.github.io/tog" class="btn see-more" data-project="project7">See More</a>
+            <a href="https://jcanlasdesigns.github.io/tog" class="btn see-more" data-project="project7">See More</a>
+          </div>
+        </div>
+		<div class="portfolio-card">
+          <img src="assets/images/project8.png" alt="Michelle Vicente - Hair & Makeup" class="portfolio-img">
+          <div class="portfolio-content">
+            <h3>MICHELLE VICENTE - HAIR & MAKE UP PORTFOLIO</h3>
+            <p>Hair & Makeup Portfolio</p>
+            <a href="https://michellevicentemakeup.github.io/page/" class="btn see-more" data-project="project8">See More</a>
           </div>
         </div>
       </div>
@@ -1664,6 +1672,99 @@ html {
     </div>
   </div>
 </div>
+
+<div id="modal-project7" class="modal">
+  <div class="modal-content">
+    <span class="close-modal">&times;</span>
+
+    <div class="modal-header">
+      <h2>Touch of Gold Hair and Spa Salon</h2>
+      <p class="modal-subtitle">Portfolio Website Project</p>
+    </div>
+
+    <div class="modal-body">
+      <img src="assets/images/project7.png" alt="Touch of Gold Hair and Spa Salon Website" class="modal-img">
+
+      <div class="modal-description">
+        <p>
+          This project is a portfolio website created for Touch of Gold Hair and Spa Salon, a local business located in Bocaue and Balagtas, Bulacan. The goal of this project was to design and develop a clean, responsive, and user-friendly website that presents business information in a clear and organized way.
+        </p>
+
+        <div class="modal-features">
+          <h4>Project Highlights</h4>
+          <ul>
+            <li>Responsive layout optimized for desktop and mobile devices</li>
+            <li>Clean and structured page sections for services and business details</li>
+            <li>Simple navigation for improved user experience</li>
+            <li>Reusable components for easy content updates</li>
+            <li>Portfolio-focused design emphasizing clarity and readability</li>
+          </ul>
+        </div>
+
+        <p>
+          This project demonstrates my ability to translate a small business concept into a functional website layout while applying front-end and back-end development fundamentals. The design focuses on simplicity, accessibility, and maintainable code structure.
+        </p>
+
+        <div class="modal-tech">
+          <span class="tech-tag">HTML5</span>
+          <span class="tech-tag">CSS3</span>
+          <span class="tech-tag">PHP</span>
+          <span class="tech-tag">JavaScript</span>
+          <span class="tech-tag">Responsive Design</span>
+          <span class="tech-tag">UI Layout</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div id="modal-project8" class="modal">
+  <div class="modal-content">
+    <span class="close-modal">&times;</span>
+
+    <div class="modal-header">
+      <h2>Michelle Vicente – Hair and Make Up</h2>
+      <p class="modal-subtitle">Portfolio Website Project</p>
+    </div>
+
+    <div class="modal-body">
+      <img src="assets/images/project8.png" alt="Michelle Vicente Hair and Make Up Portfolio Website" class="modal-img">
+
+      <div class="modal-description">
+        <p>
+          This project is a personal portfolio website created for Michelle Vicente, a professional hair and make-up artist. The goal of the project was to design and develop a visually clean and elegant website that showcases creative work, services, and professional branding.
+        </p>
+
+        <div class="modal-features">
+          <h4>Project Highlights</h4>
+          <ul>
+            <li>Clean and minimal layout to emphasize visual content</li>
+            <li>Responsive gallery for showcasing hair and make-up works</li>
+            <li>User-friendly navigation for smooth browsing experience</li>
+            <li>Structured sections for portfolio, services, and contact details</li>
+            <li>Design focused on aesthetics, balance, and readability</li>
+          </ul>
+        </div>
+
+        <p>
+          This project demonstrates my ability to create portfolio-based websites that highlight creative professionals. It focuses on layout design, responsiveness, and maintainable code while aligning the visual style with the client’s personal brand.
+        </p>
+
+        <div class="modal-tech">
+          <span class="tech-tag">HTML5</span>
+          <span class="tech-tag">CSS3</span>
+          <span class="tech-tag">PHP</span>
+          <span class="tech-tag">JavaScript</span>
+          <span class="tech-tag">Responsive Design</span>
+          <span class="tech-tag">Portfolio Layout</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 
 
