--- a/index.html
+++ b/index.html
@@ -1782,9 +1782,9 @@ html {
           <a href="https://www.facebook.com/jeffrey.canlas.733/" target="_blank" class="contact-item">
             <i class="fab fa-facebook"></i> Facebook
           </a>
-          <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="contact-item">
+        <!--  <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="contact-item">
             <i class="fab fa-linkedin"></i> LinkedIn
-          </a>
+          </a> -->
           <!-- New Telegram Contact -->
           <a href="https://t.me/super_jc" target="_blank" class="contact-item">
             <i class="fab fa-telegram"></i> Telegram
@@ -1958,3 +1958,4 @@ html {
     </script>
   </body>
 </html>
+
